some fixes + improved database schema